Resolved the profile picture issue

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,9 +5,9 @@
     <img class="align-middle m-5" height="300px" src="/assets/What-Is-Scribe-Image.png">
   </div>
   <div class="col-sm-4">
-    <h2 class="mx-5 my-5">What is Scribe?</h2>
+    <h2 class="mx-5 my-5">What is LifestyleTears?</h2>
     <h6 class="mx-5 my-1">
-      Scribe is a thought sharing platform where you can share your thoughts and craziest ideas with the world. You can also interact with other users by commenting on their posts. 
+      LifestyleTears is a thought sharing platform where you can share your thoughts and craziest ideas with the world. You can also interact with other users by commenting on their posts. 
       <br/><br/>
       Create a free account and get started.
       <br/><br/>
@@ -19,24 +19,23 @@
 <hr/>
 
 <div class="row">
-  <div class="offset-sm-2 col-sm-8 text-center pt-5 mt-5">
+  <div class="offset-sm-2 col-sm-8 text-center pt-2 mt-2">
     <h5>Contact Us</h5>
 
     <div class="row">
-      <div class="offset-sm-2 col-sm-4 text-left pt-5 vertical-divider mt-5 ">
-        <i class="fa fa-phone mt-3"></i> 9897978798
+      <div class="offset-sm-2 col-sm-4 text-left pt-2 vertical-divider mt-5 ">
+        <i class="fa fa-phone mt-3"></i> 9971541579
         <br/>
-        <i class="fa fa-envelope mt-3"></i> trainings@internshala.com
+        <i class="fa fa-envelope mt-3"></i> kaustubh19j@gmail.com
         <br/>
-        <i class="fa fa-facebook mt-3"></i> Internshala Trainings
+        <i class="fa fa-facebook mt-3"></i> fb.com/kaustubh.joshi
         <br/>
       </div>
 
-      <div class="col-sm-6 text-left py-5 my-5 px-5">
-        <i class="fa fa-map-marker mt-3"></i> Scholiverse Educare Pvt. Ltd.<br/>
-        <i class="fa fa-map-marker mt-1 invisible"></i> B-809, Unitech Business Zone,<br/>
-        <i class="fa fa-map-marker mt-1 invisible"></i> Nirvana Country, South City 2,<br/>
-        <i class="fa fa-map-marker mt-1 invisible"></i> Gurgaon, India - 122018<br/>
+      <div class="col-sm-6 text-left py-2 my-5 px-5">
+        <i class="fa fa-map-marker mt-3"></i>&nbsp; 435-E Pocket-2<br/>
+        <i class="fa fa-map-marker mt-1 invisible"></i> Mayur Vihar Phase-1,<br/>
+        <i class="fa fa-map-marker mt-1 invisible"></i> Delhi, India - 110091<br/>
       </div>
     </div>
 
