--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand " href="#">
       <img src="assets/logo4.png" alt="Logo">
     </a>
@@ -27,7 +27,7 @@
         </li>
   
         <li class="nav-item right " *ngIf="loggedIn">
-          <a class="nav-link" [routerLink]="'/profile/' + user.uid">My Profile</a>
+          <a class="nav-link" [routerLink]="'/profile/'+user.uid">My Profile</a>
         </li>
         <li class="nav-item right " *ngIf="loggedIn">
           <a class="nav-link" routerLink="/" (click)="logout()">Log out</a>
