auth guard / profile component

--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -4,5 +4,8 @@
 }
 
 nav {
-    border-bottom: 1px solid #6ca3f9;
+    color: white;
+    background-color: #dc3454;
+    border-bottom: 1px solid white;
 }
+
