--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg ">
     <a class="navbar-brand " href="#">
       <img src="assets/logo4.png" alt="Logo">
     </a>
@@ -10,12 +10,12 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mt-1 mr-auto">
   
-        <li class="nav-item" routerLinkActive="active" data-toggle="collapse" data-target=".navbar-collapse" *ngIf="!loggedIn">
-          <a class="nav-link" routerLink="/home">Home</a>
+        <li  class="nav-item " routerLinkActive="active" data-toggle="collapse" data-target=".navbar-collapse" *ngIf="!loggedIn">
+          <a  style="color: white;" class="nav-link" routerLink="/home">Home</a>
         </li>
   
-        <li class="nav-item" routerLinkActive="active" data-toggle="collapse" data-target=".navbar-collapse" *ngIf="loggedIn">
-          <a class="nav-link" routerLink="/myblogs">Home</a>
+        <li  class="nav-item" routerLinkActive="active" data-toggle="collapse" data-target=".navbar-collapse" *ngIf="loggedIn">
+          <a style="color: white;" class="nav-link" routerLink="/myblogs">Home</a>
         </li>
   
       </ul>
@@ -27,10 +27,10 @@
         </li>
   
         <li class="nav-item right " *ngIf="loggedIn">
-          <a class="nav-link" [routerLink]="'/profile/'+user.uid">My Profile</a>
+          <a style="color: white;" class="nav-link" [routerLink]="'/profile/'+user.uid">My Profile</a>
         </li>
         <li class="nav-item right " *ngIf="loggedIn">
-          <a class="nav-link" routerLink="/" (click)="logout()">Log out</a>
+          <a style="color: white;" class="nav-link" routerLink="/" (click)="logout()">Log out</a>
         </li>
   
       </ul>
