--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -1,5 +1,5 @@
 .background-left {
-    background-color: #2e7cf6;
+    background-color: #dc3454;
     background-image: url('/assets/Sign-Up-BG-Image.png');
     background-repeat: no-repeat;
     background-size: contain;
@@ -7,7 +7,7 @@
 }
 
 .background-right {
-    background-color: #2e7cf6;
+    background-color: #dc3454;
 }
 
 .card {
